testsuite/tests/grammar/invalid_parserless/unref_node.lkt
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(
        ExampleNode(null(ParserlessNode))
        | ExampleNode(Identifier(@Identifier))
    )
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode {
    @parse_field @nullable n: FooNode
}

class ParserlessNode : FooNode {
}

class Identifier : FooNode implements TokenNode {
}
